--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,10 @@
 # 数据源配置，请修改为你项目的实际配置
 # springboot2.0之后 驱动变更
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.1.1.0:3306/data
-spring.datasource.username=java
+spring.datasource.url=jdbc:mysql://127.1.1.0:3306/test
+spring.datasource.username=root
 spring.datasource.password=123456
+
+spring.mvc.servlet.path=/dev/api
+
+eybond.quota.enabled=true
